# Perplexity-CLI

./: .gitignore  chat_history.json  main.py  prompt.txt  prompt2.txt  prompt3.txt  prompt4.txt  pyproject.toml
pplx_cli/: cli.py  client.py  config.py  context.py  history.py  tui.py
